--- a/index.html
+++ b/index.html
@@ -47,13 +47,6 @@
                     <div class="unit unit-spacing-xs align-items-center">
                       <div class="unit-left font-weight-bold">Free Call:</div>
                       <div class="unit-body"><a href="tel:30309977238">+ (847)-577-6420</a></div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit unit-spacing-xs align-items-center">
-                      <div class="unit-left font-weight-bold">Opening Hours:</div>
-                      <div class="unit-body"> Mon: Closed</div>
-                      <div class="unit-body"> Tues-Fri: 9:00 AM - 7:00 PM</div>
                       <div class="unit-body"> Sat: 9:00 AM - 6:00 PM</div>
                       <div class="unit-body"> Sun: 10:00 AM - 5:00 PM</div>
 
@@ -118,8 +111,7 @@
                   <div class="divider-lg" data-caption-animate="fadeInLeft" data-caption-delay="550"></div>
                   <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Enjoy the best nail care in
                     Arlington Heights. Make your nails perfect now.</p><a class="button button-primary"
-                    href="https://www.vagaro.com/Heranails1/services" data-caption-animate="fadeInUp"
-                    data-caption-delay="450" target="_blank">Book Now</a>
+                    href="#contact" data-caption-animate="fadeInUp" data-caption-delay="450">Book Now</a>
                 </div>
                 <div class="col-6">
                   <div class="slider-img-block"><img src="images/slide-img-1.png" alt="" data-caption-animate="fadeInUp"
@@ -141,8 +133,8 @@
                   <div class="divider-lg" data-caption-animate="fadeInLeft" data-caption-delay="550"></div>
                   <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Enjoy the best nail care in
                     Arlington Heights. Make your nails perfect now.</p><a class="button button-primary"
-                    href="https://www.vagaro.com/Heranails1/services" data-caption-animate="fadeInUp"
-                    data-caption-delay="450" target="_blank">Book Now</a>
+                    href="#contact" data-caption-animate="fadeInUp"
+                    data-caption-delay="450">Book Now</a>
                 </div>
                 <div class="col-6">
                   <div class="slider-img-block"><img src="images/slide-img-2.png" alt="" data-caption-animate="fadeInUp"
@@ -164,8 +156,8 @@
                   <div class="divider-lg" data-caption-animate="fadeInLeft" data-caption-delay="550"></div>
                   <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="250">Enjoy the best nail care in
                     Arlington Heights. Make your nails perfect now</p><a class="button button-primary"
-                    href="https://www.vagaro.com/Heranails1/services" data-caption-animate="fadeInUp"
-                    data-caption-delay="450" target="_blank">Book Now</a>
+                    href="#contact" data-caption-animate="fadeInUp"
+                    data-caption-delay="450">Book Now</a>
                 </div>
                 <div class="col-6">
                   <div class="slider-img-block"><img src="images/slide-img-3.png" alt="" data-caption-animate="fadeIn"
@@ -203,8 +195,7 @@
               hygiene, detail, and the latest nail trends, Hera Nails Salon is your go-to destination for beautiful,
               long-lasting nails and top-tier customer care.
 
-            </p><a class="button button-default-outline" href="https://www.vagaro.com/Heranails1/services"
-              target="_blank">Book
+            </p><a class="button button-default-outline" href="#contact">Book
               Now</a>
           </div>
         </div>
@@ -452,7 +443,7 @@
                 <span class="price">$55</span>
               </li>
             </ul>
-            <a href="https://www.vagaro.com/Heranails1/services" target="_blank" class="view-more-btn">View More</a>
+            <a href="#contact" target="_blank" class="view-more-btn">View More</a>
 
           </div>
         </div>
@@ -496,7 +487,7 @@
                 <span class="price">$55</span>
               </li>
             </ul>
-            <a href="https://www.vagaro.com/Heranails1/services" target="_blank" class="view-more-btn">View More</a>
+            <a href="#contact" target="_blank" class="view-more-btn">View More</a>
           </div>
         </div>
       </div>
@@ -691,7 +682,7 @@
                   </div>
                 </div>
               </div>
-            </div><a class="button button-primary" href="https://www.vagaro.com/Heranails1/services" target="_blank">Book
+            </div><a class="button button-primary" href="#contact">Book
               Now</a>
           </div>
         </section>
