--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         <p>Includes shaping, cuticle care, and polish</p>
                       </div>
                       <div class="price-value">
-                        <h4>$18</h4>
+                        <h4>$20</h4>
                       </div>
                     </div>
                     <div class="pricing-classic-item">
@@ -530,7 +530,7 @@
                         <p>Timeless white-tip finish</p>
                       </div>
                       <div class="price-value">
-                        <h4>$23</h4>
+                        <h4>$25</h4>
                       </div>
                     </div>
                     <div class="pricing-classic-item">
@@ -539,7 +539,7 @@
                         <p>Long-wear, fast-drying vegan polish</p>
                       </div>
                       <div class="price-value">
-                        <h4>$25</h4>
+                        <h4>$27</h4>
                       </div>
                     </div>
                     <div class="pricing-classic-item">
@@ -677,6 +677,15 @@
                       </div>
                       <div class="price-value">
                         <h4>$55</h4>
+                      </div>
+                    </div>
+                    <div class="pricing-classic-item">
+                      <div class="pricing-classic-body">
+                        <h4>Manicure Pedicure Combo</h4>
+                        <p>Manicure & Pedicure Combo</p>
+                      </div>
+                      <div class="price-value">
+                        <h4>$50</h4>
                       </div>
                     </div>
                   </div>
